Added horns item

--- a/src/main/resources/assets/digs_dnd_origins/lang/en_us.json
+++ b/src/main/resources/assets/digs_dnd_origins/lang/en_us.json
@@ -3,5 +3,6 @@
   "item.digs_dnd_origins.blue_scale": "Blue Scale",
   "item.digs_dnd_origins.green_scale": "Green Scale",
   "item.digs_dnd_origins.white_scale": "White Scale",
-  "item.digs_dnd_origins.black_scale": "Black Scale"
+  "item.digs_dnd_origins.black_scale": "Black Scale",
+  "item.digs_dnd_origins.horns": "Horns"
 }
