--- a/src/main/resources/assets/digs_dnd_origins/lang/en_us.json
+++ b/src/main/resources/assets/digs_dnd_origins/lang/en_us.json
@@ -4,5 +4,6 @@
   "item.digs_dnd_origins.green_scale": "Green Scale",
   "item.digs_dnd_origins.white_scale": "White Scale",
   "item.digs_dnd_origins.black_scale": "Black Scale",
-  "item.digs_dnd_origins.horns": "Horns"
+  "item.digs_dnd_origins.horns": "Horns",
+  "item.digs_dnd_origins.toy_frog_spawn_egg": "Toy Frog"
 }
