gave toy frog a proper name for jade

--- a/src/main/resources/assets/digs_dnd_origins/lang/en_us.json
+++ b/src/main/resources/assets/digs_dnd_origins/lang/en_us.json
@@ -21,6 +21,7 @@
   "entity.digs_dnd_origins.green_breath": "Poison Breath",
   "entity.digs_dnd_origins.red_breath": "Fire Breath",
   "entity.digs_dnd_origins.white_breath": "Ice Breath",
+  "entity.digs_dnd_origins.toy_frog": "Toy Frog",
 
   "effect.digs_dnd_origins.freeze": "Freezing",
   "effect.digs_dnd_origins.stun": "Stunned"
