added translation keys for origin name and descriptions

--- a/src/main/resources/assets/digs_dnd_origins/lang/en_us.json
+++ b/src/main/resources/assets/digs_dnd_origins/lang/en_us.json
@@ -32,5 +32,109 @@
   "layer.origins.dwarf.name": "Dwarven Lineage",
   "layer.origins.elf.name": "Elven Lineage",
   "layer.origins.gnome.name": "Gnomic Descendance",
-  "layer.origins.halfling.name": "Halfling Descendance"
+  "layer.origins.halfling.name": "Halfling Descendance",
+
+  "origin.digs_dnd_origins.dragonborn.name": "Dragonborn",
+  "origin.digs_dnd_origins.dragonborn.description": "Born of dragons, as their name proclaims, the dragonborn walk proudly through a world that greets them with fearful incomprehension.",
+  "origin.digs_dnd_origins.dragonborn/black.name": "Black",
+  "origin.digs_dnd_origins.dragonborn/black.description": "Black dragonborns are descendants of the ancient black dragons, and as such some of their ancestor's abilities manifest in them.",
+  "origin.digs_dnd_origins.dragonborn/blue.name": "Blue",
+  "origin.digs_dnd_origins.dragonborn/blue.description": "Blue dragonborns are descendants of the ancient blue dragons, and as such some of their ancestor's abilities manifest in them.",
+  "origin.digs_dnd_origins.dragonborn/brass.name": "Brass",
+  "origin.digs_dnd_origins.dragonborn/brass.description": "Brass dragonborns are descendants of the ancient brass dragons, and as such some of their ancestor's abilities manifest in them.",
+  "origin.digs_dnd_origins.dragonborn/green.name": "Green",
+  "origin.digs_dnd_origins.dragonborn/green.description": "Green dragonborns are descendants of the ancient green dragons, and as such some of their ancestor's abilities manifest in them.",
+  "origin.digs_dnd_origins.dragonborn/red.name": "Red",
+  "origin.digs_dnd_origins.dragonborn/red.description": "Red dragonborns are descendants of the ancient red dragons, and as such some of their ancestor's abilities manifest in them.",
+  "origin.digs_dnd_origins.dragonborn/white.name": "White",
+  "origin.digs_dnd_origins.dragonborn/white.description": "White dragonborns are descendants of the ancient white dragons, and as such some of their ancestor's abilities manifest in them.",
+
+  "origin.digs_dnd_origins.dwarf.name": "Dwarf",
+  "origin.digs_dnd_origins.dwarf.description": "Bold and hardy, dwarves are known as skilled warriors, miners, and workers of stone and metal.",
+  "origin.digs_dnd_origins.dwarf/hill.name": "Hill Dwarf",
+  "origin.digs_dnd_origins.dwarf/hill.description": "As a hill dwarf, you have keen senses, deep intuition, and remarkable resilience.",
+  "origin.digs_dnd_origins.dwarf/mountain.name": "Mountain Dwarf",
+  "origin.digs_dnd_origins.dwarf/mountain.description": "As a mountain dwarf, you’re strong and hardy, accustomed to a difficult life in rugged terrain.",
+
+  "origin.digs_dnd_origins.elf.name": "Elf",
+  "origin.digs_dnd_origins.elf.description": "Elves are a magical people of otherworldly grace, living in the world but not entirely part of it.",
+  "origin.digs_dnd_origins.elf/dark.name": "Dark Elf",
+  "origin.digs_dnd_origins.elf/dark.description": "Also called dark elves, the Drow have skin that resembles charcoal or obsidian, as well as stark white or pale yellow hair.",
+  "origin.digs_dnd_origins.elf/high.name": "High Elf",
+  "origin.digs_dnd_origins.elf/high.description": "As a high elf, you have a keen mind and a mastery of at least the basics of magic.",
+  "origin.digs_dnd_origins.elf/wood.name": "Wood Elf",
+  "origin.digs_dnd_origins.elf/wood.description": "As a wood elf, you have keen senses and intuition, and your fleet feet carry you quickly and stealthily through your native forests.",
+
+  "origin.digs_dnd_origins.gnome.name": "Gnome",
+  "origin.digs_dnd_origins.gnome.description": "A gnome’s energy and enthusiasm for living shines through every inch of their tiny body.",
+  "origin.digs_dnd_origins.gnome/deep.name": "Deep Gnome",
+  "origin.digs_dnd_origins.gnome/deep.description": "Guarded, and suspicious of outsiders, svirfneblin are cunning and taciturn, but can be just as kind-hearted, loyal, and compassionate as their surface cousins.",
+  "origin.digs_dnd_origins.gnome/forest.name": "Forest Gnome",
+  "origin.digs_dnd_origins.gnome/forest.description": "Forest gnomes tend to be friendly with other good-spirited woodland folk, and they regard elves and good fey as their most important allies.",
+  "origin.digs_dnd_origins.gnome/rock.name": "Rock Gnome",
+  "origin.digs_dnd_origins.gnome/rock.description": "As a rock gnome, you have a natural inventiveness and hardiness beyond that of other gnomes.",
+
+  "origin.digs_dnd_origins.half-elf.name": "Half-Elf",
+  "origin.digs_dnd_origins.half-elf.description": "Walking in two worlds but truly belonging to neither, half-elves combine what some say are the best qualities of their elf an human parents: human curiosity, inventiveness, and ambition tempered by the refined senses, love of nature, and artistic tastes of the elves.",
+
+  "origin.digs_dnd_origins.half-orc.name": "Half-Orc",
+  "origin.digs_dnd_origins.half-orc.description": "Half-orcs’ grayish pigmentation, sloping foreheads, jutting jaws, prominent teeth, and towering builds make their orcish heritage plain for all to see.",
+
+  "origin.digs_dnd_origins.halfling.name": "Halfling",
+  "origin.digs_dnd_origins.halfling.description": "The comforts of home are the goals of most halflings’ lives: a place to settle in peace and quiet, far from marauding monsters and clashing armies; a blazing fire and a generous meal; fine drink and fine conversation.",
+  "origin.digs_dnd_origins.halfling/lightfoot.name": "Lightfoot Halfling",
+  "origin.digs_dnd_origins.halfling/lightfoot.description": "As a lightfoot halfling, you can easily hide from notice, even using other people as cover.",
+  "origin.digs_dnd_origins.halfling/stout.name": "Stout Halfling",
+  "origin.digs_dnd_origins.halfling/stout.description": "As a stout halfling, you’re hardier than average and have some resistance to poison.",
+
+  "origin.digs_dnd_origins.tiefling.name": "Tiefling",
+  "origin.digs_dnd_origins.tiefling.description": "Tieflings are derived from human bloodlines, and in the broadest possible sense, they still look human. However, their infernal heritage has left a clear imprint on their appearance.",
+
+  "origin.digs_dnd_origins.variant_human.name": "Variant Human",
+  "origin.digs_dnd_origins.variant_human.description": "With their penchant for migration and conquest, humans are more physically diverse than other common races.",
+
+  "origin.digs_dnd_origins.elf/cantrips/firebolt.name": "Firebolt",
+  "origin.digs_dnd_origins.elf/cantrips/firebolt.description": "You hurl a mote of fire at a creature or object within range. On a hit, the target takes 3 fire damage. Any target hit by this spell ignites and continues to burn for 2 fire ticks.",
+  "origin.digs_dnd_origins.elf/cantrips/lightning_lure.name": "Lightning Lure",
+  "origin.digs_dnd_origins.elf/cantrips/lightning_lure.description": "You create a lash of lightning energy that strikes at one creature you're aiming at. On a hit, the target takes 4 lightning damage and is stunned for half a second.",
+  "origin.digs_dnd_origins.elf/cantrips/poison_spray.name": "Poison Spray",
+  "origin.digs_dnd_origins.elf/cantrips/poison_spray.description": "You extend your hand toward a creature you can see within range and project a puff of noxious gas from your palm. On a hit, the target takes 4 withering damage and is poisoned for 3 seconds.",
+  "origin.digs_dnd_origins.elf/cantrips/ray_of_frost.name": "Ray of Frost",
+  "origin.digs_dnd_origins.elf/cantrips/ray_of_frost.description": "A frigid beam of blue-white light streaks toward a creature within range.",
+
+  "origin.digs_dnd_origins.feats/charger.name": "Charger",
+  "origin.digs_dnd_origins.feats/charger.description": "While you are sprinting, you can choose to either shove or deal extra damage to a creature. If you hit a target while your hand is empty, you have significantly more knockback, but if you hit the creature with a weapon you will gain +4 to the damage you deal. This ability has a 6 second cooldown and you cannot sprint in that time.",
+  "origin.digs_dnd_origins.feats/heavily_armored.name": "Heavily Armored",
+  "origin.digs_dnd_origins.feats/heavily_armored.description": "You have trained to master the use of heavy armor. You gain proficiency with heavy armor, giving you +2 to your armor toughness while a full set of diamond or stronger is equipped. You are 10% slower while benefiting from this effect.",
+  "origin.digs_dnd_origins.feats/lightly_armored.name": "Lightly Armored",
+  "origin.digs_dnd_origins.feats/lightly_armored.description": "You have trained to master the use of light armor. You gain proficiency with light armor, giving you +2 to your armor toughness while a full set of chainmail or lighter is equipped. You are 5% slower while benefiting from this effect.",
+  "origin.digs_dnd_origins.feats/mobile.name": "Mobile",
+  "origin.digs_dnd_origins.feats/mobile.description": "Your speed increases by 20% but your exhaustion increases by 30%.",
+  "origin.digs_dnd_origins.feats/moderately_armored.name": "Moderately Armored",
+  "origin.digs_dnd_origins.feats/moderately_armored.description": "You have trained to master the use of medium armor. You gain proficiency with medium armor, giving you +2 to your armor toughness while a full set of armor heavier than chainmail but lighter than diamond is equipped. You are 7% slower while benefiting from this effect.",
+  "origin.digs_dnd_origins.feats/sentinel.name": "Sentinel",
+  "origin.digs_dnd_origins.feats/sentinel.description": "When you hit a creature who is facing away from you, either for running away or attacking an ally, the target will be stunned for 6 seconds. This ability has a 6 second cooldown and does not work on other sentinels. You take 50% increased damage from projectiles.",
+  "origin.digs_dnd_origins.feats/skilled.name": "Skilled",
+  "origin.digs_dnd_origins.feats/skilled.description": "You gain proficiency in three additional skills of your choice, but all skills will be half as effective. You will choose your skills upon selecting this feat.",
+  "origin.digs_dnd_origins.feats/skulker.name": "Skulker",
+  "origin.digs_dnd_origins.feats/skulker.description": "You are expert at slinking through shadows. Sneaking while in light level 7 or less will render you (but not your armor) invisible. Sky light level is taken into account for this feat.",
+  "origin.digs_dnd_origins.feats/tough.name": "Tough",
+  "origin.digs_dnd_origins.feats/tough.description": "Your health point maximum increases by 20%, but your ranged attack damage is reduced by 30%.",
+
+  "origin.digs_dnd_origins.skills/animal_handling.name": "Animal Handling",
+  "origin.digs_dnd_origins.skills/animal_handling.description": "You deal no damage to animals tamed by you.",
+  "origin.digs_dnd_origins.skills/arcana.name": "Arcana",
+  "origin.digs_dnd_origins.skills/arcana.description": "You gain xp 20% faster.",
+  "origin.digs_dnd_origins.skills/athletics.name": "Athletics",
+  "origin.digs_dnd_origins.skills/athletics.description": "You deal and resist 10% more knockback.",
+  "origin.digs_dnd_origins.skills/medicine.name": "Medicine",
+  "origin.digs_dnd_origins.skills/medicine.description": "All healing for you is increased by 20%.",
+  "origin.digs_dnd_origins.skills/nature.name": "Nature",
+  "origin.digs_dnd_origins.skills/nature.description": "When using bonemeal on crops, the bonemeal effect is applied twice.",
+  "origin.digs_dnd_origins.skills/sleight_of_hand.name": "Sleight of Hand",
+  "origin.digs_dnd_origins.skills/sleight_of_hand.description": "Most of your interactions do not trigger sculk sensors.",
+  "origin.digs_dnd_origins.skills/stealth.name": "Stealth",
+  "origin.digs_dnd_origins.skills/stealth.description": "Most of your movements do not trigger sculk sensors.",
+  "origin.digs_dnd_origins.skills/survival.name": "Survival",
+  "origin.digs_dnd_origins.skills/survival.description": "You gain an additional hunger bar for each item you eat."
 }
